fixed spacing btw card-text

--- a/AgriKart/css/style.scss
+++ b/AgriKart/css/style.scss
@@ -213,4 +213,8 @@
     color: #dc4c64 !important;
   }
 
+  .card-text{
+    margin-bottom: 5px;
+  }
+
   
